--- a/views/places/show.ejs
+++ b/views/places/show.ejs
@@ -3,7 +3,7 @@
 
 <div class='row'>
     <div class='col-6'>
-        <div id="placeCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="placeCarousel" class="carousel slide" data-bs-interval="false">
             <div class="carousel-inner">
                 <% place.images.forEach((img, i) => { %>
                 <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
